# FastStream_Template

./: .env.dist  .env.docker  .env.test  .env.tests  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  Makefile  README.md  alembic.ini  docker-compose-tests.yaml  docker-compose.yaml  pyproject.toml  pytest.ini  requirements.txt  test_stress.py
alembic/: env.py  script.py.mako
alembic/versions/: d62ade67f6dc_.py
app/: __init__.py  __main__.py  amqp.py  app.py  fastapi.py  faststream.py  http.py  main.py  taskiq.py
app/adapters/: __init__.py  adapters.py  amqp.py  db.py  postgres.py  rabbitmq.py  redis.py
app/controllers/amqp/: __init__.py  taskiq.py
app/controllers/amqp/middlewares/: __init__.py  exception.py
app/controllers/amqp/v1/: user.py  users.py
app/controllers/http/: __init__.py  deps.py
app/controllers/http/handlers/: __init__.py  exception.py
app/controllers/http/v1/: user.py
app/controllers/http/v1/user/: __init__.py  create.py  retreive.py
app/core/: amqp.py  broker.py  config.py  database.py  exps.py  ioc.py
app/core/exception/: __init__.py  base.py  exception.py  exceptions.py  http.py  status.py  system.py  token.py  user.py
app/core/security/: __init__.py  jwt.py
app/models/: __init__.py  base.py  user.py
app/models/types/: __init__.py  unix.py
app/repositories/: __init__.py  base.py  user.py
app/repositories/postgres/: base.py  user.py
app/repositories/redis/: __init__.py  base.py  user.py
app/routes/amqp/: __init__.py  users.py
app/routes/http/: __init__.py  deps.py
app/routes/http/user/: create.py  retreive.py
app/services/: __init__.py  user.py
app/types/: __init__.py  unix.py
app/usecases/: __init__.py  usecases.py  user.py
app/usecases/security/: __init__.py  jwt.py  pwd.py  security.py
test/: just_http.py  test_stress.py
tests/: conftest.py  taskiq_faststream_testing.py  test_user.py
tests/http/: test_user.py
tests/usecases/: test_user_2.py
