[tool.poetry]
name = "faststream-template"
version = "0.1.0"
description = ""
authors = ["Selix <asel1x@icloud.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["all"], version = "^0.114.1"}
sqlmodel = "^0.0.22"
faststream = {extras = ["rabbit"], version = "^0.5.23"}
alembic = "^1.13.2"
pyjwt = "^2.9.0"
dishka = "^1.3.0"
greenlet = "^3.1.0"
loguru = "^0.7.2"
bcrypt = "^4.2.0"
asyncpg = "^0.29.0"
pre-commit = "^3.8.0"
taskiq = "^0.11.7"
redis = "^5.0.8"
types-redis = "^4.6.0.20240903"
pytest-asyncio = "^0.24.0"
pytest = "^8.3.3"
taskiq-aio-pika = "^0.4.1"
taskiq-redis = "^1.0.0"
poetry-core = "^1.9.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
